fix grids and alignment

--- a/resume.scss
+++ b/resume.scss
@@ -78,18 +78,19 @@ body {
 .skillSection {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    // align-content: center;
 }
 
 line {
-    width: 100%; 
+    width: 100%;
     border-bottom: 1px dotted rgba(0, 0, 0, 0.3); 
-    line-height: 0.1em;
 }
 
 .gridLine {
-    // width: calc(100% - $labelSpacing);
+    width: auto;
     left: $labelSpacing;
-    // right: -20px;
+    right: 0;
     padding-top: 10px;
     position: absolute;
 }
